[project]
name = "memory-system"
version = "0.1.0"
description = "A conservative event-log-first memory system prototype for agents."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

